0.7.1 /

0.7.0 / Jule 17, 2016
[Alexandr Topilski]
- [Redis] Stable sentinel connection
- [Redis] Stable cluster connection
- Stable create keys dialog

0.6.3 / Jule 9, 2016
[Alexandr Topilski]
- [Redis] Commands update
- [SSDB] Up sources to version 1.9.3
- [SSDB] DBKCOUNT command
- [RocksDB] Up sources to version 4.8.0
- Update QScintilla to version 2.9.2
- Update libssh2 to version libssh 1.7.0
- Crash application on running "Discovery" under Sentinel Connection #6 

0.6.2 / May 7, 2016
[Alexandr Topilski]
- [Redis] Sentinel support

0.6.1 / April 30, 2016
[Alexandr Topilski]
- [Memcached] Not connected to server, impossible to get discovery info #4
- Server roles
- Clear database
- Property to change font globally
- Config version
- Folders for connections
- Keys namespaces

0.5.8 / Fabruary 20, 2016
[Alexandr Topilski]
- [UnQLite] Save data propertly
- [UnQLite] Info command
- [LevelDB] Stable on windows
- [LMDB] Info command
- Commands refactoring
- Fix some memory leaks

0.5.7 / January 7, 2016
[Alexandr Topilski]
- [Redis] Redis cluster discovery button doesn't work with protected Redis configuration #59 
- [Redis] Edit existing connection settings doesn't show existing parameter values #58
- [Redis] Up hiredis sources to version 0.13.3
- [LMDB] Up sources to version 0.9.70
- [LevelDB] Up sources to version 1.18
- [SSDB] Up sources to version 1.9.2
- [UnQLite] Up sources to version 1.1.6
- [RocksDB] Up sources to version 4.4.0
- Fix close connection crash

0.5.6 / October 18, 2015
[Alexandr Topilski]
- Font selection for widgets
- Hex view for output data
- [Redis] HGETALL for hash values
- [Memcached] memcached connection fails with UNKNOWN READ #2 

0.5.5 / September 19, 2015
[Alexandr Topilski]
- Clear history
- Logging mseconds option
- Not able to view Graphical History Chart on Windows #5
- UnQLite database support http://unqlite.org/
- LMDB database support http://symas.com/mdb/
- Bugs fixes
- [SSDB] dbsize extend command