@@ -1,4 +1,6 @@
 0.9.1 /
+[Alexandr Topilski]
+- Statitstics module
 
 0.9.0 / Jule 17, 2016
 [Alexandr Topilski]
