@@ -1,4 +1,4 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.3.0)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
 PROJECT(unqlite)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/src)
